Comienza migración a Compose v2
Cambia imagen base a la oficial de Docker, en lugar de la ya obsoleta
docker/compose (ahora es legacy para Compose v1).

Actualiza versión de dependencias y renombra argumentos de construcción.

Renombra fichero docker-compose.yml a la nueva nomenclatura preferida,
compose.yaml. Actualiza referencias.

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,5 +5,5 @@ services:
       context: .
       dockerfile: ${DOCKERFILE:-Dockerfile}
       args:
-        DOCKER_COMPOSE_VERSION:
-        OPENSSH_CLIENT_VERSION:
+        DOCKER_VERSION:
+        OPENSSH_VERSION:
