--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,14 @@ stages:
   - package
   - post-package
 
-.docker-build:
+docker-build-support-branch:
   variables:
-    COMPOSE_FILE_NAME: compose.yaml
+    VERSION: ${CI_COMMIT_SHORT_SHA}
+
+docker-build-stable-branch:
+  variables:
+    VERSION: ${CI_COMMIT_SHORT_SHA}
+
+docker-build-tag:
+  variables:
+    VERSION: ${CI_COMMIT_TAG}
