Prueba nuevas plantillas CI en rama dev

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 include:
   - project: 'redmic-project/gitlab-ci-templates'
-    ref: master
-    file: '/packaging.yml'
+    ref: dev
+    file: '/packaging-docker/docker-build.yml'
 
 stages:
   - pre-package
