--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 include:
   - project: 'redmic-project/gitlab-ci-templates'
-    ref: dev
+    ref: master
     file: '/packaging-docker/docker-build.yml'
 
 stages:
